# 3-tier-demo

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
frontend/: .gitignore  README.md  default.nix  flake.nix  package.json  pubspec.yaml
frontend/lib/: header.dart  login.dart  main.dart  middleware.dart  product.dart  state.dart
frontend/lib/models/: account.dart  cart.dart  catalog.dart  product.dart
frontend/lib/screens/: account.dart  add.dart  admin.dart  cart.dart  edit.dart  home.dart  login.dart
frontend/lib/widgets/: catalog.dart  header.dart  productForm.dart  search.dart
frontend/src/: App.js  FrontPage.js  Header.js
middleware/: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
middleware/middleware/: __init__.py  app.py  config.py  database.py  database_helper.py  models.py
