[tool.poetry]
name = "middleware"
version = "0.1.0"
description = ""
authors = ["Samuel Monson <smonson at irbash dot net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
sqlitedict = "^2.1.0"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
email-validator = "^2.1.1"

[tool.poetry.scripts]
middleware = "middleware:main"
db_helper = "middleware.database_helper:db_helper"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
